<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Math Workout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addition">Addition</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="subtraction">Subtraction</string>
    <string name="quiz">Quiz</string>
    <string name="fastest25">Fastest to 20</string>
    <string name="practice">Practice</string>
</resources>
