<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_2"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/addition"
        style="@style/launcher_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue_2"
        android:text="@string/addition" />

    <Button
        android:id="@+id/subtraction"
        style="@style/launcher_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue_3"
        android:layout_weight="1"
        android:text="@string/subtraction" />

    <Button
        android:id="@+id/multiplication"
        style="@style/launcher_button"
        android:layout_width="match_parent"
        android:background="@color/blue_4"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/multiplication" />

</LinearLayout>