<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_2"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/quiz"
        style="@style/launcher_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue_1"
        android:text="@string/quiz"
        android:textSize="@dimen/over_blown_text_size" />

    <Button
        android:id="@+id/fastest25"
        style="@style/launcher_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue_3"
        android:text="@string/fastest25"
        android:textSize="@dimen/over_blown_text_size" />

    <Button
        android:id="@+id/practice"
        style="@style/launcher_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue_4"
        android:text="@string/practice"
        android:textSize="@dimen/over_blown_text_size" />

</LinearLayout>